[gd_scene load_steps=15 format=2]

[ext_resource path="res://Images/Backgrounds/BG3.jpg" type="Texture" id=1]
[ext_resource path="res://Scripts/Settings.gd" type="Script" id=2]
[ext_resource path="res://Comic_Neue/ComicNeue-Bold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Images/Buttons/Button4Hover.png" type="Texture" id=4]
[ext_resource path="res://Images/Buttons/Button4.png" type="Texture" id=5]
[ext_resource path="res://Images/Buttons/ButtonDisabled.png" type="Texture" id=6]
[ext_resource path="res://Audio/Go!.wav" type="AudioStream" id=7]
[ext_resource path="res://Audio/timeOut.wav" type="AudioStream" id=8]
[ext_resource path="res://Audio/buttonPress2.wav" type="AudioStream" id=9]
[ext_resource path="res://Images/Buttons/Slider 3.png" type="Texture" id=10]

[sub_resource type="DynamicFont" id=1]
size = 32
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 3 )

[node name="Settings" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
rect_scale = Vector2( 0.375, 0.375 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="BGM" type="AudioStreamPlayer" parent="."]

[node name="BGMVolume" type="HSlider" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -95.5
margin_top = -126.635
margin_right = 95.5
margin_bottom = -110.635
custom_icons/grabber_highlight = ExtResource( 10 )
custom_icons/grabber = ExtResource( 10 )
min_value = -15.0
max_value = 12.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MusicVolumeLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -40.0
margin_top = -170.513
margin_right = 40.0
margin_bottom = -133.513
custom_fonts/font = SubResource( 1 )
text = "Music"

[node name="SFXVolume" type="HSlider" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -95.5
margin_top = -45.556
margin_right = 95.5
margin_bottom = -29.5559
custom_icons/grabber_highlight = ExtResource( 10 )
custom_icons/grabber = ExtResource( 10 )
min_value = -15.0
max_value = 12.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SFXVolumeLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -29.5
margin_top = -85.0629
margin_right = 29.5
margin_bottom = -48.0629
custom_fonts/font = SubResource( 1 )
text = "SFX"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TestSFX" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -64.0
margin_top = 26.2709
margin_right = 64.0
margin_bottom = 63.2709
custom_fonts/font = SubResource( 1 )
text = "Test SFX"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChangeActionLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -138.5
margin_top = 148.113
margin_right = 138.5
margin_bottom = 185.113
custom_fonts/font = SubResource( 1 )
text = "Change Dictionaries"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="backButton" type="TextureButton" parent="."]
margin_right = 40.0
margin_bottom = 40.0
rect_scale = Vector2( 0.2, 0.2 )
texture_normal = ExtResource( 5 )
texture_hover = ExtResource( 4 )

[node name="back" type="Label" parent="."]
margin_left = 52.0
margin_top = 19.0
margin_right = 92.0
margin_bottom = 38.0
custom_fonts/font = SubResource( 2 )
text = "<"

[node name="SFX1" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="SFX2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )

[node name="SFX3" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[node name="testSFX1" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -165.687
margin_top = 76.2106
margin_right = 434.312
margin_bottom = 376.211
rect_scale = Vector2( 0.2, 0.2 )
texture_normal = ExtResource( 5 )
texture_hover = ExtResource( 4 )
texture_disabled = ExtResource( 6 )

[node name="testSFX2" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -58.473
margin_top = 76.2106
margin_right = 541.527
margin_bottom = 376.211
rect_scale = Vector2( 0.2, 0.2 )
texture_normal = ExtResource( 5 )
texture_hover = ExtResource( 4 )
texture_disabled = ExtResource( 6 )

[node name="testSFX3" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 52.2759
margin_top = 76.2106
margin_right = 652.276
margin_bottom = 376.211
rect_scale = Vector2( 0.2, 0.2 )
texture_normal = ExtResource( 5 )
texture_hover = ExtResource( 4 )
texture_disabled = ExtResource( 6 )

[node name="Label" type="Label" parent="."]
margin_left = 378.328
margin_top = 396.193
margin_right = 432.328
margin_bottom = 415.193
custom_fonts/font = SubResource( 3 )
text = "Sound 1"

[node name="Label2" type="Label" parent="."]
margin_left = 488.107
margin_top = 396.193
margin_right = 542.107
margin_bottom = 415.193
custom_fonts/font = SubResource( 3 )
text = "Sound 2"

[node name="Label3" type="Label" parent="."]
margin_left = 598.0
margin_top = 396.0
margin_right = 654.0
margin_bottom = 415.0
custom_fonts/font = SubResource( 3 )
text = "Sound 3"

[node name="changeActions" type="TextureButton" parent="."]
margin_left = 388.763
margin_top = 492.718
margin_right = 988.763
margin_bottom = 792.718
rect_scale = Vector2( 0.2, 0.2 )
texture_normal = ExtResource( 5 )
texture_hover = ExtResource( 4 )
texture_disabled = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="actions" type="Label" parent="."]
margin_left = 424.107
margin_top = 513.533
margin_right = 474.107
margin_bottom = 532.533
custom_fonts/font = SubResource( 4 )
text = "Actions"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="changeCharacters" type="TextureButton" parent="."]
margin_left = 512.583
margin_top = 492.718
margin_right = 1112.58
margin_bottom = 792.718
rect_scale = Vector2( 0.2, 0.2 )
texture_normal = ExtResource( 5 )
texture_hover = ExtResource( 4 )
texture_disabled = ExtResource( 6 )

[node name="actions2" type="Label" parent="."]
margin_left = 537.062
margin_top = 513.533
margin_right = 611.062
margin_bottom = 532.533
custom_fonts/font = SubResource( 4 )
text = "Characters"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="finished" from="BGM" to="." method="_on_BGM_finished"]
[connection signal="value_changed" from="BGMVolume" to="." method="_on_HSlider_value_changed"]
[connection signal="value_changed" from="SFXVolume" to="." method="_on_SFXVolume_value_changed"]
[connection signal="pressed" from="backButton" to="." method="_on_backButton_pressed"]
[connection signal="pressed" from="testSFX1" to="." method="_on_testSFX1_pressed"]
[connection signal="pressed" from="testSFX2" to="." method="_on_testSFX2_pressed"]
[connection signal="pressed" from="testSFX3" to="." method="_on_testSFX3_pressed"]
[connection signal="pressed" from="changeActions" to="." method="_on_changeActions_pressed"]
[connection signal="pressed" from="changeCharacters" to="." method="_on_changeCharacters_pressed"]
